--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="bar-seconds"></div>
         <div class="number_hours">
             <span style="--index:1;"><p>1</p></span>
             <span style="--index:2;"><p>2</p></span>
@@ -21,11 +22,11 @@
             <span style="--index:10;"><p>10</p></span>
             <span style="--index:11;"><p>11</p></span>
             <span style="--index:12;"><p>12</p></span>
-            <div class="hands-box">
-                <div class="hand hours"><i></i></div>
-                <div class="hand minutes"><i></i></div>
-                <div class="hand seconds"><i></i></div>
-            </div>
+        </div>
+        <div class="hands-box">
+            <div class="hand hours"><i></i></div>
+            <div class="hand minutes"><i></i></div>
+            <div class="hand seconds"><i></i></div>
         </div>
     </div>
 
