--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="logo">Rudra</div>
         <div class="bar-seconds"></div>
         <div class="number_hours">
             <span style="--index:1;"><p>1</p></span>
